<resources>
    <string name="app_name">Film Dünyası</string>
    <string name="login_title">Giriş Yap</string>
    <string name="username_hint">Kullanıcı Adı</string>
    <string name="password_hint">Şifre</string>
    <string name="forgot_password">Şifrenizi mi unuttunuz?Sıfırlayın.</string>
    <string name="login_button">Giriş Yap</string>
    <string name="no_account">Henüz hesabınız yok mu?</string>
    <string name="register_text">Kayıt Olun</string>
    <string name="signup_title">Kayıt Ol</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Şifrenizi tekrar giriniz</string>
    <string name="signup_button">Kayıt Ol</string>
    <string name="hello">Merhaba</string>
    <string name="search_hint">Film Ara</string>
    <string name="category_title">Kategoriler</string>
    <string name="popular_title">En popülerler</string>
    <string name="storyline_title">Film Hikayesi</string>
    <string name="cast_title">Oyuncular</string>
    <string name="watch_trailer">İzle</string>
    <string name="forgot_password_title">Şifremi Unuttum</string>
    <string name="forgot_password_instruction">Lütfen üye olduğunuz kullanıcı adını giriniz.</string>
    <string name="forgot_password_button">Şifremi Unuttum</string>
    <string name="remember_text">Bilgilerini hatırladıysan hemen</string>
    <string name="sign_in_text">Oturum Aç!</string>
    <string name="favourites_title">Favorilerim</string>
    <string name="empty_favourites_message">Favori film bulunmuyor. Hemen keşfet ve ekle!</string>
    <string name="favorites_title">Favorilerim</string>
    <string name="empty_favorites_message">Favori film bulunmuyor. Hemen keşfet ve ekle!</string>
    <string name="saved_list_title">Listem</string>
    <string name="empty_saved_list_message">Listende film yok. Hemen keşfet ve ekle!</string>
    <string name="remove_selected">Seçilenleri Kaldır</string>
    <string name="welcome_message">Hoşgeldin %1$s</string>
    <string name="recommendation_message">En sevdiğin filmi yayınlayalım.</string>
    <string name="voice_search_description">Sesli Arama</string>
    <string name="empty_category_message">Bu kategoride film bulunamadı.</string>
    <string name="recommended">Önerilenler</string>


    <string name="who_is_watching">Kim İzliyor?</string>
    <string name="theme_settings">Tema Ayarları</string>
    <string name="account_info">Hesap Bilgileri</string>
    <string name="privacy_and_security">Gizlilik ve Güvenlik</string>
    <string name="help_and_support">Yardım ve Destek</string>
    <string name="change_password">Şifreyi Değiştir</string>
    <string name="change_email">E-Posta Adresi</string>
    <string name="enter_current_email">Mevcut E-Posta Adresi</string>
    <string name="enter_new_email">Yeni E-Posta Adresi</string>
    <string name="new_email_same_as_current">Yeni e-posta adresi mevcut e-posta adresi ile aynı olamaz.</string>
    <string name="confirm_new_email">Yeni E-Posta Adresi(Tekrar)</string>
    <string name="emails_do_not_match">E-Posta adresleri eşleşmiyor</string>
    <string name="email_changed_successfully">E-Posta başarıyla değiştirildi</string>
    <string name="email_change_failed">E-Posta değişikliği başarısız oldu</string>
    <string name="delete_account_confirmation">Hesabınızı silmek istediğinizden emin misiniz? Bu işlem geri alınamaz.</string>
    <string name="account_deleted_successfully">Hesap başarıyla silindi.</string>
    <string name="account_delete_failed">Hesap silinirken bir hata oluştu.</string>
    <string name="confirm">Onayla</string>
    <string name="cancel">İptal</string>
    <string name="logged_out">Başarıyla çıkış yaptınız.</string>
    <string name="error_occurred">Hata: %1$s</string>
    <string name="firestore_delete_failed">Firestore verileri silinirken bir hata oluştu.</string>
    <string name="firestore_delete_success">Firestore verileri başarıyla silindi.</string>
    <string name="password">Şifre</string>
    <string name="enter_current_password">Mevcut şifreniz</string>
    <string name="enter_new_password">Yeni Şifre</string>
    <string name="confirm_new_password">Yeni Şifre(Tekrar)</string>
    <string name="passwords_do_not_match">Şifreler eşleşmiyor</string>
    <string name="password_too_short">Şifre en az 6 karakter olmalıdır</string>
    <string name="password_changed_successfully">Şifre başarıyla değiştirildi</string>
    <string name="password_change_failed">Şifre değiştirilemedi</string>
    <string name="invalid_current_password">Mevcut şifre hatalı</string>
    <string name="current_password_empty">Mevcut şifre boş olamaz.</string>
    <string name="new_password_empty">Yeni şifre boş olamaz.</string>
    <string name="confirm_password_empty">Onay şifresi boş olamaz.</string>
    <string name="data_protection_description">
"Verilerinizin güvenliği bizim için çok önemlidir. Tüm verileriniz yalnızca uygulama içindeki işlemleri gerçekleştirmek amacıyla saklanır ve hiçbir şekilde üçüncü taraflarla paylaşılmaz. Verileriniz, Firebase güvenlik protokolleri ile korunmaktadır.

Aşağıdaki butonu kullanarak verilerinizi cihazınıza indirebilirsiniz. Bu dosyada, uygulama kullanımınızla ilişkili bilgileri bulabilirsiniz. Herhangi bir sorunuz varsa destek ekibimize ulaşabilirsiniz."
</string>
    <string name="download_your_data">Verilerinizi İndirin</string>
    <string name="data_download_success">Verileriniz başarıyla indirildi: %1$s</string>
    <string name="data_download_fail">Veriler indirilemedi. Lütfen tekrar deneyin.</string>
    <string name="data_not_found">Veri bulunamadı.</string>


    <string name="profile_title">Profil</string>
    <string name="profile_edit">Profili Düzenle</string>
    <string name="menu_change_username">Kullanıcı Adı Değiştir</string>
    <string name="menu_change_password">Şifre Değiştir</string>
    <string name="menu_change_email">E-posta Değiştir</string>
    <string name="menu_notification">Bildirim Seçenekleri</string>
    <string name="menu_language">Dil Seçenekleri</string>
    <string name="account_header">Hesap</string>
    <string name="general_header">Genel</string>
    <string name="menu_about_app">Uygulama Hakkında</string>
    <string name="menu_theme">Tema</string>
    <string name="menu_data_protection">Veri Koruma</string>
    <string name="menu_delete_account">Hesabı Sil</string>
    <string name="menu_logout">Çıkış Yap</string>
    <string name="select_theme">Tema Seçenekleri</string>
    <string name="supported_themes">Desteklenen Temalar</string>
    <string name="theme_light">Açık Mod</string>
    <string name="theme_dark">Koyu Mod</string>
    <string name="theme_default">Varsayılan Mod</string>
    <string name="notification_settings">Bildirim Seçenekleri</string>
    <string name="enable_notifications">Açık</string>
    <string name="disable_notifications">Kapalı</string>
    <string name="save">Kaydet</string>
    <string name="logout_confirmation">Uygulamadan çıkış yapmak üzeresiniz. Devam etmek istiyor musunuz?</string>
    <string name="logout_confirm">Çıkış Yap</string>
    <string name="logout_cancel">Vazgeç</string>
    <string name="logout_success">Başarıyla çıkış yapıldı.</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="delete_account">Hesap Sil</string>
    <string name="language_selection">Dil Seçimi</string>
    <string name="language_tr">TR-Türkçe</string>
    <string name="language_en">EN-İngilizce</string>
    <string name="about_app_description">Bu uygulama, kullanıcıların en iyi deneyimi yaşaması için tasarlanmıştır.Gelecekte daha fazla özellik ve geliştirme ile hizmet vermeye devam edecek....</string>
    <string name="more_info">Daha Fazla Bilgi</string>
    <string name="back">Geri</string>
    <string name="personal_info">Kişisel Bilgilerim</string>
    <string name="first_name">Ad</string>
    <string name="last_name">Soyad</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="email">E-posta</string>
    <string name="change">Değiştir</string>
    <string name="change_username">Kullanıcı Adı Değiştir</string>
    <string name="enter_new_username">Yeni Kullanıcı Adınızı Girin</string>
    <string name="username_updated_successfully">Kullanıcı adı başarıyla güncellendi.</string>
    <string name="username_update_failed">Kullanıcı adı güncellenirken hata oluştu.</string>
    <string name="please_enter_valid_username">Lütfen geçerli bir kullanıcı adı girin.</string>
    <string name="first_name_hint">Adınızı girin</string>
    <string name="last_name_hint">Soyadınızı girin</string>
    <string name="confirm_password">Şifre (Tekrar)</string>
    <string name="register">Kaydol</string>
    <string name="password_rules_title">Şifre Kuralları</string>
    <string name="password_rules_details">- En az 6 karakter içermelidir.\n- Ad, soyad, kullanıcı adı veya e-posta içermemelidir.\n- Tekrarlanan desenler (123123, abcabc) olmamalıdır.\n- Aynı karakter ardışık tekrarlanmamalıdır (111, aaa).</string>
    <string name="ok">Tamam</string>
    <string name="password_rules_text">Şifre Kural Detayı</string>
    <string name="fullscreen_image">Tam Ekran Görsel</string>
    <string name="close">Kapat</string>
    <string name="share">Paylaş</string>
    <string name="share_image_title">Fotoğrafı Paylaş</string>
    <string name="take_photo">Fotoğraf Çek</string>
    <string name="select_photo">Mevcut Fotoğrafı Seç</string>
    <string name="view_photo">Fotoğrafı Görüntüle</string>
    <string name="photo_updated">Fotoğraf başarıyla güncellendi</string>
    <string name="photo_load_error">Fotoğraf yüklenemedi</string>
    <string name="share_prompt">Fotoğrafı Paylaş</string>
    <string name="view_all">Hepsini Görün</string>
    <string name="social_login">Veya sosyal hesaplarınızla giriş yapın</string>
    <string name="facebook_login">Facebook ile Giriş Yap</string>
    <string name="google_login">Google ile Giriş Yap</string>
    <string name="instagram_login">Instagram ile Giriş Yap</string>
    <string name="default_web_client_id">1007759706019-oibiuqt7ht8lenebsl4hkki7i76cmcjo.apps.googleusercontent.com</string>
    <string name="facebook_app_id">429816690085723</string>
    <string name="facebook_client_token">ee03bd07c03f137b0496e6fb389c60b5</string>
    <string name="continue_with_google">Google ile devam et</string>
    <string name="continue_with_facebook">Facebook ile devam et</string>
    <string name="home_fragment">Ana Sayfa</string>
    <string name="favourites_fragment">Favoriler</string>
    <string name="saved_fragment">Kaydedilenler</string>
    <string name="account_fragment">Profil</string>
</resources>