<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/home_fragment" />

    <item
        android:id="@+id/favouritesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/bottom_favourite"
        android:title="@string/favourites_fragment" />

    <item
        android:id="@+id/savedFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/save"
        android:title="@string/saved_fragment" />

    <item
        android:id="@+id/accountFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/profile"
        android:title="@string/account_fragment" />
</menu>
