<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/txtThemeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/select_theme"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtThemeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/supported_themes"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <RadioGroup
        android:id="@+id/radioGroupThemes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/txtThemeDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSaveTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/orange"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/radioGroupThemes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
