<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/margin_medium"
    tools:context=".ui.activities.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:src="@drawable/back"
            android:contentDescription="@string/back"
            android:layout_marginEnd="@dimen/margin_small" />

        <TextView
            android:id="@+id/textForgotPasswordHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textForgotPasswordInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/forgot_password_instruction"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toBottomOf="@id/textForgotPasswordInstruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextForgotUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:background="@drawable/edittext_background"
        android:textColor="@android:color/white"
        android:textColorHint="@color/darker_gray"
        android:hint="@string/username_hint"
        app:layout_constraintTop_toBottomOf="@id/textUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:text="@string/forgot_password_button"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_large"
        android:background="@drawable/orange_button_background"
        app:layout_constraintTop_toBottomOf="@id/editTextForgotUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/buttonForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewRemembered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:textColor="@color/orange"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_small"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
